test/trivial/bradc/defaultinit1a.good
defaultinit1a.chpl:1: In function 'main':
defaultinit1a.chpl:3: error: 'a' used before defined
